--- a/mp1/qt-hello1/mainwindow.ui
+++ b/mp1/qt-hello1/mainwindow.ui
@@ -6,18 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>513</width>
-    <height>396</height>
+    <width>511</width>
+    <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="pushButtonInit">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>160</x>
       <y>60</y>
       <width>89</width>
       <height>25</height>
@@ -27,10 +27,10 @@
      <string>LCD Init</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="pushButtonOpen">
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>40</x>
       <y>60</y>
       <width>89</width>
       <height>25</height>
@@ -43,8 +43,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>180</y>
+      <x>30</x>
+      <y>170</y>
       <width>331</width>
       <height>17</height>
      </rect>
@@ -53,10 +53,10 @@
      <string>TextLabel</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="pushButtonClose">
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>40</x>
       <y>100</y>
       <width>89</width>
       <height>25</height>
@@ -69,17 +69,17 @@
    <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>40</x>
       <y>10</y>
       <width>221</width>
       <height>25</height>
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_4">
+   <widget class="QPushButton" name="pushButtonString">
     <property name="geometry">
      <rect>
-      <x>320</x>
+      <x>280</x>
       <y>10</y>
       <width>89</width>
       <height>25</height>
@@ -89,7 +89,7 @@
      <string>LCD_String</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_5">
+   <widget class="QPushButton" name="pushButtonClear">
     <property name="geometry">
      <rect>
       <x>420</x>
@@ -154,7 +154,7 @@
      <string>y</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_6">
+   <widget class="QPushButton" name="pushButtonPos">
     <property name="geometry">
      <rect>
       <x>410</x>
@@ -167,13 +167,39 @@
      <string>LCD Set Pos</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButtonExit">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>210</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Exit</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButtonTest">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>200</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Test start</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>513</width>
+     <width>511</width>
      <height>22</height>
     </rect>
    </property>
@@ -186,7 +212,6 @@
     <bool>false</bool>
    </attribute>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
